--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@
       <img src="./static/images/teaser_pavas.png"
                  class="interpolation-image"
                  alt="Interpolate start reference image."
-                 style="max-width: 100%;"
+                 style="max-width: 70%;"
       />
 
-      <h2 class="subtitle has-text-centered">
+      <h2 class="subtitle">
         <!-- We introduce <span class="dnerf">AVHBench</span>, the first comprehensive benchmark specifically designed to evaluate the perception and comprehension capabilities of audio-visual LLMs. -->
         We introduce Physics-Aware Video-to-Audio Synthesis (PAVAS). [Top] Current V2A models often generate physically inconsistent audio. [Bottom] We estimate physics values (object-level mass and velocity) from an input video using Physics Parameter Estimator, which are explicitly integrated into a latent diffusion-based model using Phy-Adapter to generate a physically plausible audio.
       </h2>
@@ -204,6 +204,7 @@
   </div>
   </div>
 </section>
+
 
 
 <section class="section">
@@ -285,7 +286,7 @@
         <div class="columns is-centered">
           <div class="column is-full has-text-centered">
             <figure class="image" style="width: 100%; max-width: 80%; margin: 0 auto;">
-              <img src="./static/images/qual1_pavas.png" alt="Sample 1">
+              <img src="./static/images/qual_1_pavas.png" alt="Sample 1">
             </figure>
             <p><strong>Samples 1&2</strong></p>
           </div>
@@ -295,7 +296,7 @@
         <div class="columns is-centered">
           <div class="column is-full has-text-centered">
             <figure class="image" style="width: 100%; max-width: 80%; margin: 0 auto;">
-              <img src="./static/images/qual2_pavas.png" alt="Sample 2">
+              <img src="./static/images/qual_2_pavas.png" alt="Sample 2">
             </figure>
             <p><strong>Samples 3&4</strong></p>
           </div>
@@ -305,7 +306,7 @@
         <div class="columns is-centered">
           <div class="column is-full has-text-centered">
             <figure class="image" style="width: 100%; max-width: 80%; margin: 0 auto;">
-              <img src="./static/images/qual3_pavas.png" alt="Sample 3">
+              <img src="./static/images/qual_3_pavas.png" alt="Sample 3">
             </figure>
             <p><strong>Samples 5&6</strong></p>
           </div>
