--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 </a>
               </span> -->
               <span class="link-block">
-                <a href="https://physics-aware-video-to-audio-synthesis.github.io/" class="external-link button is-normal is-rounded is-dark">
+                <a href="https://arxiv.org/abs/2512.08282" class="external-link button is-normal is-rounded is-dark">
 <!--                <a class="external-link button is-normal is-rounded is-dark">-->
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -199,7 +199,8 @@
       <!-- Demo Video -->
       <div class="columns is-centered">
         <div class="column is-full has-text-centered">
-          <video controls style="width: 100%; max-width: 80%; margin: 0 auto;">
+          <!-- <video controls style="width: 100%; max-width: 80%; margin: 0 auto;"> -->
+          <video autoplay muted loop playsinline controls style="width: 100%; max-width: 80%; margin: 0 auto;">
             <source src="./static/images/PAVAS_demo_video.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
@@ -353,12 +354,15 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{hyun2025pavas,
-        title={PAVAS: Physics-Aware Video-to-Audio Synthesis},
-        author={Hyun-Bin, Oh and Takida, Yuhta and Uesaka, Toshimitsu and Oh, Tae-Hyun and Mitsufuji, Yuki},
-        journal={arXiv preprint arXiv:2512.18325},
-        year={2025}
-      }</code></pre>
+    <pre><code>@misc{hyunbin2025pavasphysicsawarevideotoaudiosynthesis,
+        title={PAVAS: Physics-Aware Video-to-Audio Synthesis}, 
+        author={Oh Hyun-Bin and Yuhta Takida and Toshimitsu Uesaka and Tae-Hyun Oh and Yuki Mitsufuji},
+        year={2025},
+        eprint={2512.08282},
+        archivePrefix={arXiv},
+        primaryClass={cs.CV},
+        url={https://arxiv.org/abs/2512.08282}, 
+  }</code></pre>
   </div>
 </section>
 
