--- a/index.html
+++ b/index.html
@@ -354,15 +354,12 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@misc{hyunbin2025pavasphysicsawarevideotoaudiosynthesis,
-        title={PAVAS: Physics-Aware Video-to-Audio Synthesis}, 
-        author={Oh Hyun-Bin and Yuhta Takida and Toshimitsu Uesaka and Tae-Hyun Oh and Yuki Mitsufuji},
-        year={2025},
-        eprint={2512.08282},
-        archivePrefix={arXiv},
-        primaryClass={cs.CV},
-        url={https://arxiv.org/abs/2512.08282}, 
-  }</code></pre>
+    <pre><code>@article{hyun2025pavas,
+        title={PAVAS: Physics-Aware Video-to-Audio Synthesis},
+        author={Hyun-Bin, Oh and Takida, Yuhta and Uesaka, Toshimitsu and Oh, Tae-Hyun and Mitsufuji, Yuki},
+        journal={arXiv preprint arXiv:2512.08282},
+        year={2025}
+    }</code></pre>
   </div>
 </section>
 
